--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ant-design-pro",
   "version": "4.5.0",
   "private": true,
-  "description": "An out-of-box UI solution for enterprise applications",
+  "description": "基于ant-design-pro的标签框架",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
